# battlezone

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  sonar-project.properties
.github/workflows/: ci.yml  release.yml
assets/arcade/: arcade-rules.txt  battlefield.txt
assets/sounds/: README.md
examples/: generate_readme_media.rs
src/: app.rs  arcade.rs  attract.rs  audio.rs  constants.rs  customization.rs  game.rs  high_scores.rs  input.rs  kitty.rs  lib.rs  main.rs  math.rs  render.rs  terminal.rs
tests/: game_flow.rs
